--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
     <!----------Course section end------------>
 
-     <!-- ------------Campus section---------------->   
+<!--      ------------Campus section---
         <section class="campus">
             <h1>Our global Campus</h1>
             <p>Our campus is strongly effective for building a careers</p>
@@ -98,7 +98,7 @@
             </div>
             
         </section>
-     <!-- ------------Campus section End---------------->
+    -->
 
      <!-- --------------Facilities section------------------>
         <section class="facilities">
